fix: fixed header on mobile

--- a/style/styles.css
+++ b/style/styles.css
@@ -309,6 +309,10 @@ a {
         margin-bottom: 5px;
     }
 
+    .hero {
+        margin-top: 60px;
+    }
+
     .quote {
         font-size: 25px;
     }
